[package]
name = "dakv"
version = "0.1.0"
authors = ["dkkb <dabkb@aol.com>"]
edition = "2018"

[lib]
name = "dakv"
test = true
doctest = true
bench = true
path = "src/lib.rs"

[[example]]
name = "simple"
path = "example/simple.rs"

[[example]]
name = "perf"
path = "example/perf.rs"

[workspace]
members = [
    "logger",
    "varint",
]

[dependencies]
varint = { path = "./varint", package = "dakv_varint" }
logger = { path = "./logger", package = "dakv_logger" }
rb_tree = { path = "./rb_tree", package = "rb_tree" }
typed-arena = "2.0.1"
crc32fast = "1.2.1"
memmap = "0.7.0"
byteorder = "1.3.1"
quick-error = "1.2.3"
log = "0.4.0"
env_logger = "0.6.1"
integer-encoding = "1.0.7"
num-traits = "0.2.11"
snap = "1"
zstd = "0.9"
lazy_static = "1.4.0"
seahash = "4.0.1"
lock_api = "0.4.2"
scopeguard = "1.1.0"
slog-scope = "4.3.0"
slog = "2.5.2"
crossbeam-channel = "0.5.1"
atomic_float = "0.1.0"

# only for test
[dev-dependencies]
criterion = "0.3"
temp_testdir = "0.2"
tempfile = "3.1.0"
regex = "1.5.4"
pprof = { version = "0.4", features = ["flamegraph", "protobuf"] }

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
codegen-units = 4
debug-assertions = true

# The release profile, used for `cargo build --release`
[profile.release]
lto = true
opt-level = 3
debug = true
# TODO: remove this once rust-lang/rust#50199 and rust-lang/rust#53833 are resolved.
codegen-units = 1

# The benchmark profile is identical to release, except that lto = false
[profile.bench]
lto = false
opt-level = 3
debug = true
codegen-units = 1


#[[bench]]
#name = "slice"
#harness = false
